Excepts, Zod and basic user

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,20 @@
+# Basics
 TZ=UTC
 PORT=3333
 HOST=localhost
 LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
+
+# Postgres
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=
+
+# Mailing
+BV_API_KEY=
+BV_SENDER_EMAIL_DEFAULT=
+BV_SENDER_NAME_DEFAULT=
+BV_RECEIVER_TEST=
