Service Bree corrected

--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@adonisjs/core": "^6.14.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.3.0",
+    "@getbrevo/brevo": "^2.2.0",
     "@vinejs/vine": "^2.1.0",
+    "bree": "^9.2.4",
     "luxon": "^3.5.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
