Brevo and Bree properly tested and ready-checked

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ DB_USER=
 DB_PASSWORD=
 DB_DATABASE=
 
-# Mailing
-BV_API_KEY=
-BV_SENDER_EMAIL_DEFAULT=
-BV_SENDER_NAME_DEFAULT=
-BV_RECEIVER_TEST=
+# Mailing (Brevo)
+BV_API_KEY=none
+BV_SENDER_EMAIL_DEFAULT=email@domain.ext
+BV_SENDER_NAME_DEFAULT=sender
+BV_RECEIVER_TEST=email@domain.ext
