--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,13 @@ BV_API_KEY=none
 BV_SENDER_EMAIL_DEFAULT=email@domain.ext
 BV_SENDER_NAME_DEFAULT=sender
 BV_RECEIVER_TEST=email@domain.ext
+
+# S3
+S3_ACCESS_KEY_ID=none
+S3_SECRET_ACCESS_KEY=none
+S3_ENDPOINT=https://none.no
+S3_REGION=auto
+# S3_REGION=fr-par
+S3_BUCKET=none
+S3_ACL=false
+S3_VISIBILITY=private
