--- a/package.json
+++ b/package.json
@@ -60,9 +60,12 @@
     "@adonisjs/core": "^6.14.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.3.0",
+    "@aws-sdk/client-s3": "^3.691.0",
+    "@aws-sdk/s3-request-presigner": "^3.691.0",
     "@getbrevo/brevo": "^2.2.0",
     "@vinejs/vine": "^2.1.0",
     "bree": "^9.2.4",
+    "flydrive": "^1.1.0",
     "luxon": "^3.5.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
