magicLink connection + connection ok, need to work on email and time validity of magiclink

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "#models/*": "./app/models/*.js",
     "#mails/*": "./app/mails/*.js",
     "#services/*": "./app/services/*.js",
+    "#schemas/*": "./app/schemas/*.js",
     "#listeners/*": "./app/listeners/*.js",
     "#events/*": "./app/events/*.js",
     "#middleware/*": "./app/middleware/*.js",
