--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
 
+# Magic Links
+FRONT_ORIGIN=http://localhost:3000
+MAGIC_CONNECT=${FRONT_ORIGIN}/request/login
+
 # Postgres
 DB_HOST=127.0.0.1
 DB_PORT=5432
