--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": "22.11.0"
   },
   "imports": {
+    "#routes/*": "./start/routes/*.js",
     "#controllers/*": "./app/controllers/*.js",
     "#exceptions/*": "./app/exceptions/*.js",
     "#models/*": "./app/models/*.js",
@@ -91,5 +92,8 @@
       "strtok3": "8.0.1"
     }
   },
-  "prettier": "@adonisjs/prettier-config"
+  "prettier": "@adonisjs/prettier-config",
+  "eslintConfig": {
+    "extends": "@adonisjs/eslint-config/app"
+  }
 }
