newemail magic link + linting issue

--- a/package.json
+++ b/package.json
@@ -92,8 +92,5 @@
       "strtok3": "8.0.1"
     }
   },
-  "prettier": "@adonisjs/prettier-config",
-  "eslintConfig": {
-    "extends": "@adonisjs/eslint-config/app"
-  }
+  "prettier": "@adonisjs/prettier-config"
 }
