Correction of en example

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ NODE_ENV=development
 
 # Magic Links
 FRONT_ORIGIN=http://localhost:3000
-MAGIC_CONNECT=${FRONT_ORIGIN}/request/login
+MAGIC_CONNECT=/account/connect
+MAGIC_NEWEMAIL=/account/changemail
 
 # Postgres
 DB_HOST=127.0.0.1
