Update dependencies + env example

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ HOST=localhost
 LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
+APP_KEY=f0g1I_QwSejun6LxirZh_02ahVwr55pH
+CORS=*
 
 # Magic Links
 FRONT_ORIGIN=http://localhost:3000
@@ -14,9 +16,9 @@ MAGIC_NEWEMAIL=/account/changemail
 # Postgres
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=
-DB_PASSWORD=
-DB_DATABASE=
+DB_USER=none
+DB_PASSWORD=none
+DB_DATABASE=none
 
 # Mailing (Brevo)
 BV_API_KEY=none
