Prepared the sand and packages protected private values in env

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,9 @@ S3_REGION=auto
 S3_BUCKET=none
 S3_ACL=false
 S3_VISIBILITY=private
+
+# CFTC Access
+CFTC_MARS_USERNAME=none
+CFTC_MARS_PASSWORD=none
+CFTC_INARIC_USERNAME=none
+CFTC_INARIC_PASSWORD=none
