--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "flydrive": "^1.1.0",
     "luxon": "^3.5.0",
     "pg": "^8.13.1",
+    "puppeteer-core": "^24.1.1",
     "reflect-metadata": "^0.2.2",
+    "tesseract.js": "^6.0.0",
     "zod": "^3.23.8"
   },
   "hotHook": {
