--- a/.env.example
+++ b/.env.example
@@ -6,23 +6,25 @@ LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
 
+# Config
+DISCORD_WEBHOOK=webhook
+
 # Magic Links
 FRONT_ORIGIN=http://localhost:3000
-MAGIC_CONNECT=/account/connect
-MAGIC_NEWEMAIL=/account/changemail
+MAGIC_CONNECT=/operation/connect
+MAGIC_NEWEMAIL=/operation/changemail
 
 # Postgres
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_USER=
-DB_PASSWORD=
-DB_DATABASE=
+POSTGRESQL_ADDON_DB=none
+POSTGRESQL_ADDON_HOST=127.0.0.1
+POSTGRESQL_ADDON_USER=none
+POSTGRESQL_ADDON_PASSWORD=none
+POSTGRESQL_ADDON_PORT=5432
 
 # Mailing (Brevo)
 BV_API_KEY=none
 BV_SENDER_EMAIL_DEFAULT=email@domain.ext
 BV_SENDER_NAME_DEFAULT=sender
-BV_RECEIVER_TEST=email@domain.ext
 
 # S3
 S3_ACCESS_KEY_ID=none
