--- a/package.json
+++ b/package.json
@@ -40,40 +40,40 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
-    "@adonisjs/eslint-config": "^2.0.0-beta.6",
+    "@adonisjs/eslint-config": "^2.0.0",
     "@adonisjs/prettier-config": "^1.4.0",
     "@adonisjs/tsconfig": "^1.4.0",
     "@japa/api-client": "^3.0.3",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
-    "@japa/runner": "^4.1.0",
-    "@swc/core": "1.10.7",
+    "@japa/runner": "^4.2.0",
+    "@swc/core": "1.11.5",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.10.7",
-    "eslint": "^9.18.0",
+    "@types/node": "^22.13.8",
+    "eslint": "^9.21.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "ts-node-maintained": "^10.9.5",
-    "typescript": "~5.7"
+    "typescript": "~5.8"
   },
   "dependencies": {
-    "@adonisjs/auth": "^9.3.1",
-    "@adonisjs/bouncer": "^3.1.4",
-    "@adonisjs/core": "^6.17.1",
+    "@adonisjs/auth": "^9.3.2",
+    "@adonisjs/bouncer": "^3.1.5",
+    "@adonisjs/core": "^6.17.2",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.0",
-    "@aws-sdk/client-s3": "^3.731.1",
-    "@aws-sdk/s3-request-presigner": "^3.731.1",
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@getbrevo/brevo": "^2.2.0",
     "@vinejs/vine": "^3.0.0",
     "argon2": "^0.41.1",
     "bree": "^9.2.4",
     "flydrive": "^1.1.0",
     "luxon": "^3.5.0",
-    "pg": "^8.13.1",
+    "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "hotHook": {
     "boundaries": [
