--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "bree": "^9.2.4",
     "flydrive": "^1.1.1",
     "luxon": "^3.6.1",
+    "mailchecker": "^6.0.17",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "zod": "^3.24.2"
