--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "#middleware/*": "./app/middleware/*.js",
     "#validators/*": "./app/validators/*.js",
     "#utils/*": "./app/utils/*.js",
+    "#jobs/*": "./app/services/thirds/bree/jobs/*.js",
     "#providers/*": "./providers/*.js",
     "#policies/*": "./app/policies/*.js",
     "#abilities/*": "./app/abilities/*.js",
@@ -47,9 +48,9 @@
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
-    "@swc/core": "1.11.20",
+    "@swc/core": "1.11.21",
     "@types/luxon": "^3.6.2",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.14.1",
     "eslint": "^9.24.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
