--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
-    "@swc/core": "1.11.21",
+    "@swc/core": "1.11.22",
     "@types/luxon": "^3.6.2",
-    "@types/node": "^22.14.1",
-    "eslint": "^9.24.0",
+    "@types/node": "^22.15.2",
+    "eslint": "^9.25.1",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
@@ -61,11 +61,12 @@
   "dependencies": {
     "@adonisjs/auth": "^9.4.0",
     "@adonisjs/bouncer": "^3.1.5",
+    "@adonisjs/cache": "^1.1.3",
     "@adonisjs/core": "^6.17.2",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.1",
-    "@aws-sdk/client-s3": "^3.787.0",
-    "@aws-sdk/s3-request-presigner": "^3.787.0",
+    "@aws-sdk/client-s3": "^3.796.0",
+    "@aws-sdk/s3-request-presigner": "^3.796.0",
     "@getbrevo/brevo": "^2.2.0",
     "@vinejs/vine": "^3.0.1",
     "argon2": "^0.41.1",
@@ -73,9 +74,9 @@
     "flydrive": "^1.1.1",
     "luxon": "^3.6.1",
     "mailchecker": "^6.0.17",
-    "pg": "^8.14.1",
+    "pg": "^8.15.5",
     "reflect-metadata": "^0.2.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   },
   "hotHook": {
     "boundaries": [
